--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*-----------------------------------------colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -8,12 +8,14 @@
 
 .bg-color-three-reasons {
     background-color: #ffffff;
-   
 }
 
-.bg-color-personal-info{
+.bg-color-personal-info {
     background-color: #f4f4f4;
+}
 
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
 .bg-color-work-history {
@@ -21,6 +23,14 @@
 }
 
 .bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
     background-color: #ffffff;
 }
 
@@ -37,43 +47,35 @@
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
+    background-color: #d9a81d;
 }
 
-/*-----------------------------------------Special paddings/margins/text */
 
-h1,h2,h4 {
-    margin: 0;
+.ui-menu-color-github {
+    background-color: #1c4a6c;
 }
 
-.inline-block {
-    display: inline-block;
+.ui-menu-color-interests {
+    background-color: #e74c3c;
 }
 
-.row-table {
-    display: table;
 
-}
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
-}
 
- 
-.history-heading,
-.section-heading {
-    font-family: "Exo",sans-serif;
+body {
+    font-family: Roboto, sans-serif;
     font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 40px;
-        
+    background-color: #525252;
+    color: #555555;
 }
 
-/*-----------------------------------------Heading */
 
-header {
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -82,9 +84,33 @@ header {
 }
 
 .general-sub {
-    font-family: "Exo",sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+
+.row-table {
+    display: table;
+}
+
+.history-heading,
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+
+/*--------------------------------------------Heading*/
+
+header {
+    margin: 0;
 }
 
 .heading {
@@ -117,24 +143,13 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #ffffff;
-
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
 }
 
 #nav {
     margin: 0;
-
 }
 
 #nav li {
-    font-size: 14px;
     padding: 0;
 }
 
@@ -149,8 +164,8 @@ header {
     text-decoration: none;
     color: #ffffff;
     height: 120px;
-
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -168,41 +183,39 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
-
-
-
 }
 
-/*-----------------------------------------Hover.css */
+
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0,0,0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
-    
 }
 
-/*-----------------------------------------Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
     margin: 0;
-
 }
-.cv-pdf i {
-    font-size: 18px;
+
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #e84610;
 }
 
 .social-links {
@@ -226,14 +239,14 @@ footer {
 }
 
 .social-links li a i:hover {
-    background-color: #e84610;
+    background: #e84610;
 }
 
 #footer-details {
-    padding: 20pxgit ;
+    margin: 20px;
 }
 
-/*-----------------------------------------Three Reasons */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -244,7 +257,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/*-----------------------------------------Personal Info*/
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -255,7 +268,6 @@ footer {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -264,11 +276,11 @@ footer {
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
     vertical-align: top;
-
 }
 
 .personal-info-item .key p {
@@ -276,16 +288,16 @@ footer {
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/*-----------------------------------------Skills*/
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -297,16 +309,13 @@ footer {
     background-color: rgba(25, 25, 25, 0.2);
 }
 
+
 .progress-section {
     margin: 40px 20px;
 }
 
-/*----------------------------------------- Work History*/
 
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -320,7 +329,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -328,12 +337,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -345,19 +354,24 @@ footer {
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
 
-/*-----------------------------------------Contact Form*/
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
-    
 }
+
 
 .center-form {
     padding-top: 10px;
@@ -368,18 +382,28 @@ footer {
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
-/*-----------------------------------------Media Queries */
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
-    
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
         margin: 0 auto;
-        max-width: 70%;
+        max-width: 50%;
     }
 }
