Add the google map Api interest.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,6 +389,7 @@ button[type="submit"] {
 /*--------------------------------------------Map*/
 div#map {
     min-height: 360px;
+    width: 100%;
 }
 
 /*--------------------------------------------Media Queries*/
